--- a/.github/workflows/init.yml
+++ b/.github/workflows/init.yml
@@ -31,4 +31,5 @@ jobs:
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps 
           asset_path: ./foo.zip
+          asset_name: foo.zip
           asset_content_type: application/zip
