--- a/.github/workflows/init.yml
+++ b/.github/workflows/init.yml
@@ -9,7 +9,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - run: curl tagesschau.de > tagesschau.de.txt
+      - run: curl https://tagesschau.de > tagesschau.de.txt
       - name: get timestamp
         id: time
         run: echo "::set-output name=action_fruit::`date -u +\"%Y-%m-%dT%H-%M-%S%Z\"`"
