--- a/.github/workflows/on-rel.yaml
+++ b/.github/workflows/on-rel.yaml
@@ -6,6 +6,12 @@ jobs:
   one:
     runs-on: ubuntu-latest
     steps:
+
+      - name: VERSION
+        env:
+          VERSION: ${{ github.event.release.tag_name }}
+        run: echo "$VERSION"
+
       - name: Dump GitHub context
         env:
           GITHUB_CONTEXT: ${{ toJson(github) }}
